--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <main>
         <h1>Stephen Hardies Phage Protein Families</h1>  
         <p>This page under construction</p>
+         <a href="file1.txt">Test link to file1.txt</a>
     </main>
   </body>
 </html>
