testing 2nd html link

--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
     <main>
         <h1>Stephen Hardies Phage Protein Families</h1>  
         <p>This page under construction</p>
-         <a href="file1.txt">Test link to file1.txt</a>
+         <b><a href="file1.txt">Test link to file1.txt</a>
+         <b><a href="GT1pap1.html">Families used for Hardies et al., Identification of structural and morphogenesis genes of
+      Sulfitobacter phage phiGT1...</a>.
     </main>
   </body>
 </html>
