scaffold files added

--- a/GT1pap1.html
+++ b/GT1pap1.html
@@ -25,8 +25,12 @@
     <ul>
       <li>phiGT1&nbsp; gp7 scaffold</li>
       <ul>
-        <li><a href="file1.txt">file1</a><br>
-        </li>
+        <li><a href="GT1gp7.scaffold.documentation.txt">GT1 gp7 scaffold documentation</a>
+        <li><a href="GT1gp7.a3.over200.a3m">a3m alignment file</a>.
+        <li><a href="GT1gp7.a3.over200.asc.mod">SAM formatted HMM</a>.
+        <li><a href="GT1gp7.a3.over200.hmm">hmmer formatted HMM</a>.
+        <li><a href="GT1gp7.a3.over200.hhm">hhpred formatted HMM</a>.
+        <li><a href="GT1gp7.P22.hhr">GT1gp7 to P22 scaffold HMM/HMM match</a>
       </ul>
     </ul>
   </body>
