added zip archive

--- a/GT1pap1.html
+++ b/GT1pap1.html
@@ -1,7 +1,6 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
 <html>
   <head>
-
     <meta http-equiv="content-type" content="text/html; charset=UTF-8">
     <title>Protein families related to phiGT1</title>
   </head>
@@ -25,12 +24,9 @@
     <ul>
       <li>phiGT1&nbsp; gp7 scaffold</li>
       <ul>
-        <li><a href="GT1gp7.scaffold.documentation.txt">GT1 gp7 scaffold documentation</a>
-        <li><a href="GT1gp7.a3.over200.a3m">a3m alignment file</a>.
-        <li><a href="GT1gp7.a3.over200.asc.mod">SAM formatted HMM</a>.
-        <li><a href="GT1gp7.a3.over200.hmm">hmmer formatted HMM</a>.
-        <li><a href="GT1gp7.a3.over200.hhm">hhpred formatted HMM</a>.
-        <li><a href="GT1gp7.P22.hhr">GT1gp7 to P22 scaffold HMM/HMM match</a>
+        <li><a href="GT1gp7.scaffold.summary.txt">Summary</a> </li>
+        <li><a href="scaffold.zip">zip archive</a><br>
+        </li>
       </ul>
     </ul>
   </body>
