add lg ter and .nex files

--- a/GT1pap1.html
+++ b/GT1pap1.html
@@ -22,12 +22,18 @@
       attempted.<br>
     </p>
     <ul>
+      <li>phiGT1&nbsp;gp2 large terminase</li>
+      <ul>
+        <li><a href="lg-ter.summary.txt">Summary</a> </li>
+        <li><a href="lg-ter.zip">zip archive</a><br></li>
+      </ul>
       <li>phiGT1&nbsp; gp7 scaffold</li>
       <ul>
         <li><a href="GT1gp7.scaffold.summary.txt">Summary</a> </li>
         <li><a href="scaffold.zip">zip archive</a><br>
         </li>
       </ul>
+
     </ul>
   </body>
 </html>
