--- a/GT1pap1.html
+++ b/GT1pap1.html
@@ -27,6 +27,11 @@
         <li><a href="lg-ter.summary.txt">Summary</a> </li>
         <li><a href="lg-ter.zip">zip archive</a><br></li>
       </ul>
+      <li>phiGT1&nbsp;gp3 portal</li>
+      <ul>
+         <li><a href="portal.summary.txt">portal.summary.txt</a></li>
+         <li><a href="GT1.portal.zip">GT1.portal.zip</a> </li>
+      </ul>
       <li>phiGT1&nbsp; gp7 scaffold</li>
       <ul>
         <li><a href="GT1gp7.scaffold.summary.txt">Summary</a> </li>
