--- a/GT1pap1.html
+++ b/GT1pap1.html
@@ -24,18 +24,23 @@
     <ul>
       <li>phiGT1&nbsp;gp2 large terminase</li>
       <ul>
-        <li><a href="lg-ter.summary.txt">Summary</a> </li>
-        <li><a href="lg-ter.zip">zip archive</a><br></li>
+        <li><a href="lg-ter.summary.txt">Large Terminase Summary</a> </li>
+        <li><a href="lg-ter.zip">large terminase zip archive</a><br></li>
       </ul>
       <li>phiGT1&nbsp;gp3 portal</li>
       <ul>
-         <li><a href="portal.summary.txt">portal.summary.txt</a></li>
-         <li><a href="GT1.portal.zip">GT1.portal.zip</a> </li>
+         <li><a href="portal.summary.txt">portal summary</a></li>
+         <li><a href="GT1.portal.zip">portal zip archive</a> </li>
+      </ul>
+      <li>phiGT1&nbsp; gp6</a>
+      <ul>
+         <li><a href="GT1gp6.summary.txt">GT1 gp6 summary</a></li>
+         <li><a href="GT1gp6.zip">GT1 gp6 zip archive</a></li>
       </ul>
       <li>phiGT1&nbsp; gp7 scaffold</li>
       <ul>
-        <li><a href="GT1gp7.scaffold.summary.txt">Summary</a> </li>
-        <li><a href="scaffold.zip">zip archive</a><br>
+        <li><a href="GT1gp7.scaffold.summary.txt">Scaffold summary</a> </li>
+        <li><a href="scaffold.zip">Scaffold zip archive</a><br>
         </li>
       </ul>
 
