--- a/GT1pap1.html
+++ b/GT1pap1.html
@@ -43,6 +43,12 @@
         <li><a href="scaffold.zip">Scaffold zip archive</a><br>
         </li>
       </ul>
+      <li>phiGT1 major capsid protein
+      <ul>
+         <li><a href="GT1.capsid.summary.txt">GT1 major capsid protein summary</a>
+         <li><a href="GT1.capsid.zip">MCP archive</a>
+      </ul>
+
 
     </ul>
   </body>
