--- a/GT1pap1.html
+++ b/GT1pap1.html
@@ -48,6 +48,11 @@
          <li><a href="GT1.capsid.summary.txt">GT1 major capsid protein summary</a>
          <li><a href="GT1.capsid.zip">MCP archive</a>
       </ul>
+      <li>phiGT1 gp10
+      <ul>
+         <li><a href="GT1gp10.summary.txt">GT1 gp10 summary</a>.
+         <li><a href="GT1gp10.zip">GT1 gp10 archive</a>.
+      </ul>
 
 
     </ul>
