--- a/GT1pap1.html
+++ b/GT1pap1.html
@@ -58,6 +58,12 @@
          <li><a href="GT1gp11.summary.txt">GT1 gp11 summary</a>.
          <li><a href="GT1gp11.zip">GT1 gp11 archive</a>.
       </ul>
+      <li> phiGT1 tubeA paralogs
+      <ul>
+
+        <li><a href="GT1gp13.gp14.summary.txt">tubeA paralogs gp13, gp14 summary</a>
+        <li><a href="GT1tubeA.zip">tubeA paralogs archive</a>.
+      </ul>
 
 
     </ul>
