--- a/GT1pap1.html
+++ b/GT1pap1.html
@@ -64,7 +64,11 @@
         <li><a href="GT1gp13.gp14.summary.txt">tubeA paralogs gp13, gp14 summary</a>
         <li><a href="GT1tubeA.zip">tubeA paralogs archive</a>.
       </ul>
-
+      <li> phiGT1 tubeB
+      <ul>
+         <li><a href="GT1tubeB.summary.txt">GT1 tubeB summary</a>.
+         <li><a href="GT1tubeB.zip">GT1 tubeB zip archive</a>.
+      </ul>
 
     </ul>
   </body>
