--- a/GT1pap1.html
+++ b/GT1pap1.html
@@ -69,6 +69,11 @@
          <li><a href="GT1tubeB.summary.txt">GT1 tubeB summary</a>.
          <li><a href="GT1tubeB.zip">GT1 tubeB zip archive</a>.
       </ul>
+      <li>phiGT1 gp16 (IVPA homolog)
+      <ul>
+         <li><a href="GT1gp16.summary.txt">GT1 gp16 summary</a>
+         <li><a href="GT1gp16.zip">GT1 gp16 zip archive</a>.
+      </ul>
 
     </ul>
   </body>
