--- a/GT1pap1.html
+++ b/GT1pap1.html
@@ -76,5 +76,11 @@
       </ul>
 
     </ul>
+
+<br><p>Although phiGT1 does not contain an RNA polymerase gene, the manuscript provided a control involving the T7-like RNA polymerase evolution
+     <ul>
+       <li><a href="RNAP.summary.txt">RNAP summary</a>.
+       <li><a href="RNAP.zip">RNAP zip archive</a>.
+     </ul>
   </body>
 </html>
