update scaffold archive

--- a/GT1pap1.generic.technical.info.html
+++ b/GT1pap1.generic.technical.info.html
@@ -63,7 +63,7 @@
         family database</li>
       <li>Sequences from a psiblast set of a proposed homolog selected
         by any other logic (synteny, analogous function, etc.)<br>
-      <li>A subset of the sequences already in the alignment labelled differently to facilitate postprocessing for presentation to the treemaking algorithm.  The newly added sequences will be at the end of the .a2m file where they can be easily extracted.
+      <li>A subset of the sequences already in the alignment labeled differently to facilitate postprocessing for presentation to the treemaking algorithm.  The newly added sequences will be at the end of the .a2m file where they can be easily extracted.
       </li>
     </ul>
     <p><b>Characteristics of the output:<br>
