--- a/GT1pap1.html
+++ b/GT1pap1.html
@@ -40,7 +40,7 @@
       <li>phiGT1&nbsp; gp7 scaffold</li>
       <ul>
         <li><a href="GT1gp7.scaffold.summary.txt">Scaffold summary</a> </li>
-        <li><a href="scaffold.zip">Scaffold zip archive</a><br>
+        <li><a href="GT1gp7.scaffold.zip">Scaffold zip archive</a><br>
         </li>
       </ul>
       <li>phiGT1 major capsid protein
