adding host sequences

--- a/index.html
+++ b/index.html
@@ -18,12 +18,9 @@
          <p><a href="GT1pap1.html">Families used in Stephen C. Hardies, Byung C. Cho, Gwang I Jang, Zhiquing Wang, Chung Y. Hwang. Identification of structural and morphogenesis genes of
       <i>Sulfitobacter</i> phage phiGT1 and placement within the evolutionary history of the podoviruses</a>.  Viruses 2023, 15(7), 1475; <a href="https://doi.org/10.3390/v15071475">https://doi.org/10.3390/v15071475</a>.
 <br>
-<p>Files in support of Chung Y. Hwang Byung C. Cho, Jin K. Kang, Jihye Park, Stephen c. Hardies.  Genomic Analysis of Two Cold-Active <i>Pseudoalteromonas</i> Phages Isloated from the Contenental Shelf in the Arctic Ocean.   To be submitted prsently.
-<ul>
-<li><a href="ACA1.genbank">ACA1.genbank</a> (OR438238)
-<li><a href="ACA2.genbank">ACA2.genbank</a> (OR438929)
-<li><a href="proACA1-A.genbank">proACA1-A.genbank</a> (OR438930)
-</ul>
+<p> <a href="ACA.html">
+Files in support of Chung Y. Hwang Byung C. Cho, Jin K. Kang, Jihye Park, Stephen c. Hardies.  Genomic Analysis of Two Cold-Active <i>Pseudoalteromonas</i> Phages Isloated from the Contenental Shelf in the Arctic Ocean.</a>   To be submitted presently.
+
     </main>
   </body>
 </html>
