adding LSH1 genbank file

--- a/index.html
+++ b/index.html
@@ -19,7 +19,10 @@
       <i>Sulfitobacter</i> phage phiGT1 and placement within the evolutionary history of the podoviruses</a>.  Viruses 2023, 15(7), 1475; <a href="https://doi.org/10.3390/v15071475">https://doi.org/10.3390/v15071475</a>.
 <br>
 <p> <a href="ACA.html">
-Files in support of Chung Y. Hwang Byung C. Cho, Jin K. Kang, Jihye Park, Stephen c. Hardies.  Genomic Analysis of Two Cold-Active <i>Pseudoalteromonas</i> Phages Isloated from the Contenental Shelf in the Arctic Ocean.</a>   To be submitted presently.
+Files in support of Chung Y. Hwang Byung C. Cho, Jin K. Kang, Jihye Park, Stephen c. Hardies.  Genomic Analysis of Two Cold-Active <i>Pseudoalteromonas</i> Phages Isloated from the Contenental Shelf in the Arctic Ocean.</a>   Viruses 2023 15(10):2061; <a href="https://doi.org/10.3390/v15102061">https://doi.org/10.3390/v15102061</a>.
+
+<p> <a href="LSH1.GenBank">Genbank file of LSH1 PX020959</a>. As of 10-18-25 this file as been submitted to GenBank, but processing is delayed due to USA Government funding issues at NCBI.  In support of Hardies,S.C., Park,J., Cho,B.C. and Hwang,C.Y. <i>Alishewanella</i> phage LSH1 from the sea surface microlayer provides a novel minimalistic view of the siphoviral hub structure. To be submitted.
+
 
     </main>
   </body>
